--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
                 <div class='col-md-1'></div>
                 <div class='col-md-4 col-sm-12'>
                     <div class='card'>
-                        <img src='synergy.png' class='card-img-top'>
+                        <img src='mosaic.jpg' class='card-img-top'>
                         <div class='card-body'>
-                            <div class='card-title text-center text-info' style="font-family: 'Courier New', Courier, monospace;"><h5>{{Your Name Here}}</h5>
+                            <div class='card-title text-center text-info' style="font-family: 'Courier New', Courier, monospace;"><h5>Avanthika Nayak</h5>
                             </div>
-                            Year-Branch-College
+                            2019 EXTC K J Somaiya College of Engineering
                         </div>
                     </div>
                 </div>
                 <div class='col-md-1'></div>
                 <div class='col-md-6'> 
                     <div class='container bg-dark text-light'>
-                        {{Write Your Review Here}}
+                        As a person with zero knowledge of github, I found this session extremely helpful and interesting. Thanks to this, now I can start using GitHub on a regular basis 
                     </div>
                 </div>
             </div>
