--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <div class='card-body'>
                             <div class='card-title text-center text-info' style="font-family: 'Courier New', Courier, monospace;"><h5>Avanthika Nayak</h5>
                             </div>
-                            2019 EXTC K J Somaiya College of Engineering
+                            SY EXTC K J Somaiya College of Engineering
                         </div>
                     </div>
                 </div>
